objects/Veda_Characteristic_Archive__b.object
<CustomObject>
    <fields>
        <fullName>Veda_Data_Block__c</fullName>
        <label>Veda Data Block</label>
        <referenceTo>Veda_Data_Block__c</referenceTo>
        <relationshipLabel>Veda Characteristic Archive Relationship</relationshipLabel>
        <relationshipName>Veda_Characteristic_Archive_Rel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>characteristic_Id__c</fullName>
        <label>characteristic Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_Level_Code__c</fullName>
        <label>data Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_Level__c</fullName>
        <label>data Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>key_Characteristic__c</fullName>
        <label>key Characteristic</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <label>unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>variable_Name__c</fullName>
        <label>variable Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda_Characteristic_Archive</label>
    <pluralLabel>Veda_Characteristic_Archive</pluralLabel>
</CustomObject>